[EDELIVERY-2314] - updated the swagger documentation
